@@ -19,7 +19,7 @@ namespace FatturaElettronica.FatturaElettronicaHeader.CessionarioCommittente
         /// Numero di identificazione fiscale ai fini IVA; i primi due caratteri rappresentano il paese ed i restanti il codice
         /// vero e proprio che, per i residenti in Italia, corrisponde al numero di partita IVA.
         /// </summary>
-        [DataProperty]
+        [DataProperty(order: -1)]
         public IdFiscaleIVA IdFiscaleIVA { get; set; }
     }
 }
