@@ -50,6 +50,13 @@ xsi:schemaLocation="http://ivaservizi.agenziaentrate.gov.it/docs/xsd/fatture/v1.
         <Provincia>RM</Provincia>
         <Nazione>IT</Nazione>
       </Sede>
+      <RappresentanteFiscale>
+        <IdFiscaleIVA>
+          <IdPaese>IT</IdPaese>
+          <IdCodice>01234567891</IdCodice>
+        </IdFiscaleIVA>
+        <Denominazione>Rappresentante fiscale</Denominazione>
+      </RappresentanteFiscale>
     </CessionarioCommittente>
   </FatturaElettronicaHeader>
   <FatturaElettronicaBody>
